tests/NormalTests/paczka1/fuzzy1/28956299.err
Error in line 5: PCnyjv A549 462
Error in line 3: ukHDyseHDX S252 27,2
Error in line 2: 8PaL S252 45,8
Error in line 1: PCnyjv A549 30,8
Error in line 21: ukHDyseHDX S364 62,8
Error in line 29: ukHDyseHDX A549 19,4
Error in line 19: mDAJ S364 11,4
